--- a/bvPortal/build.gradle
+++ b/bvPortal/build.gradle
@@ -17,8 +17,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.h2database:h2'
+	// implementation 'com.h2database:h2'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
-	//runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation'io.springfox:springfox-swagger-ui:2.9.2'
+	
 }
