--- a/bvPortal/build.gradle
+++ b/bvPortal/build.gradle
@@ -1,13 +1,25 @@
+buildscript {
+    dependencies {
+        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
+    }
+}
 plugins {
 	id 'org.springframework.boot' version '2.1.3.RELEASE'
 	id 'java'
 }
 
+
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.palantir.docker'
 
 group = 'de.beach'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+bootJar {
+    baseName = 'bvp'
+    version =  '0.1.0'
+}
 
 repositories {
 	mavenCentral()
@@ -19,12 +31,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	
-	// implementation 'com.h2database:h2'
+	implementation 'com.h2database:h2'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.postgresql:postgresql'
+	// runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation'io.springfox:springfox-swagger-ui:2.9.2'
 	
+}
+
+task unpack(type: Copy) {
+    dependsOn bootJar
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
+}
+docker {
+    name "${project.group}/${bootJar.baseName}"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
 }
