--- a/bvPortal/src/main/resources/application.properties
+++ b/bvPortal/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username= bvp
-spring.datasource.password= bvp
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username= bvp
+#spring.datasource.password= bvp
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
