--- a/bvPortal/build.gradle
+++ b/bvPortal/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	
 	// implementation 'com.h2database:h2'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
