--- a/bvPortal/build.gradle
+++ b/bvPortal/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	
+	compile group: 'com.google.cloud.sql', name: 'postgres-socket-factory', version: '1.0.13'
+	
 }
 
 task unpack(type: Copy) {
