--- a/bvPortal/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/bvPortal/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "hibernate.jdbc.lob.non_contextual_creation",
-  "type": "java.lang.String",
-  "description": "A description for 'hibernate.jdbc.lob.non_contextual_creation'"
-}]}
+{"properties": [
+  {
+    "name": "hibernate.jdbc.lob.non_contextual_creation",
+    "type": "java.lang.String",
+    "description": "A description for 'hibernate.jdbc.lob.non_contextual_creation'"
+  },
+  {
+    "name": "spring.cloud.gcp.sql.database-name",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cloud.gcp.sql.database-name'"
+  }
+]}
