--- a/bvPortal/src/main/resources/application.properties
+++ b/bvPortal/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://${POSTGRESQL_HOST}:5432/${POSTGRESQL_DATABASE}
+#spring.datasource.url = jdbc:postgresql://${POSTGRESQL_HOST}:5432/${POSTGRESQL_DATABASE}
+spring.datasource.url = ${CONNECTION_URL}
+#jdbc:postgresql://google/postgres?cloudSqlInstance=first-hold-235316:europe-west1:bvp=tcp:5432&socketFactory=com.google.cloud.sql.postgres.SocketFactory&useSSL=false
+
 spring.datasource.username = ${POSTGRESQL_USER}
 spring.datasource.password = ${POSTGRESQL_PASSWORD}
+server.port = 443
