--- a/bvPortal/build.gradle
+++ b/bvPortal/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.palantir.docker'
 
 group = 'de.beach'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '12'
 
 bootJar {
     baseName = 'bvp'
@@ -30,17 +30,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+    
+    testImplementation 'org.springframework.security:spring-security-test'
 	
-	// implementation 'com.h2database:h2'
+	implementation 'com.h2database:h2'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 	
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-	
-	compile group: 'com.google.cloud.sql', name: 'postgres-socket-factory', version: '1.0.13'
-	
+	implementation 'io.springfox:springfox-swagger2:+'
+	implementation 'io.springfox:springfox-swagger-ui:+'
+    implementation 'org.flywaydb:flyway-core'
 }
 
 task unpack(type: Copy) {
