--- a/bvPortal/src/main/resources/h2.properties
+++ b/bvPortal/src/main/resources/h2.properties
@@ -12,10 +12,11 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.datasource.username=sa
 spring.datasource.password=sa
