--- a/bvPortal/build.gradle
+++ b/bvPortal/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.apache.commons:commons-lang3:+'
     
     testImplementation 'org.springframework.security:spring-security-test'
 	
