--- a/bvPortal/src/main/resources/application.properties
+++ b/bvPortal/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.url = ${CONNECTION_URL}
 spring.datasource.username = ${POSTGRESQL_USER}
 spring.datasource.password = ${POSTGRESQL_PASSWORD}
 server.port = 8080
+
+spring.flyway.baseline-on-migrate=true
